force-app/main/default/objects/MUSW__PRTANY_TEMPLATE__c/MUSW__PRTANY_TEMPLATE__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Internal - html template to format content</description>
    <label>Printer Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printer Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>