force-app/main/default/objects/MUSW__PRTANY_TEMPLATE__c/fields/MUSW__Content__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Content__c</fullName>
    <label>Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>