force-app/main/default/objects/MUSW__PRTANY_TEMPLATE__c/fields/MUSW__css__c.field-meta.xml
<CustomField>
    <fullName>MUSW__css__c</fullName>
    <label>css</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>