force-app/main/default/objects/MUSW__PRTANY_TEMPLATE__c/fields/MUSW__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Date_Format__c</fullName>
    <label>Date Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>