force-app/main/default/objects/MUSW__PRTANY_TEMPLATE__c/fields/MUSW__PRTANY_PACKAGE__c.field-meta.xml
<CustomField>
    <fullName>MUSW__PRTANY_PACKAGE__c</fullName>
    <label>Printer Package</label>
    <referenceTo>MUSW__PRTANY_PACKAGE__c</referenceTo>
    <relationshipName>R00N60000001Hvr8EAC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>